# jax-buckets

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  STATUS.md  TESTKIT_STATUS.md  USAGE.md  install.sh  release.toml
.claude/commands/: e2e.md  review.md
.github/workflows/: ci-rust.yml  ci-tauri.yml  ci.yml  publish-crate.yml  release-cli.yml  release-desktop.yml  release-pr.yml
agents/: API.md  CLI.md  CONTRIBUTING.md  DEBUG.md  DEVELOPMENT.md  INDEX.md  INSTALL.md  PROJECT_LAYOUT.md  PR_WORKFLOW.md  README.md  RELEASE.md  REVIEW_CHECKLIST.md  RUST_PATTERNS.md  STORAGE.md  SUCCESS_CRITERIA.md  TASK_TEMPLATE.md  template-reorganization.md  template-structure.md  templating-ui-system.md
agents/concepts/: conflict-resolution.md  cryptography.md  data-model.md  fuse-architecture.md  index.md  overview.md  security.md  synchronization.md
crates/app/: CHANGELOG.md  Cargo.toml  README.md
crates/blobs-store/: CHANGELOG.md  Cargo.toml
crates/blobs-store/src/: actor.rs  bao_file.rs  database.rs  error.rs  import.rs  iroh_store.rs  lib.rs  object_store.rs  store.rs
crates/common/: CHANGELOG.md  Cargo.toml
crates/daemon/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/object-store/: CHANGELOG.md  Cargo.toml  README.md
docs/: README.md  concepts.md  fuse-mount-management-implementation.md  usage.md
issues/: cli-binary-release.md  conflict-resolution.md  daemon-local-cache.md  desktop-fuse-build-separation.md  fuse-missing-operations.md  importbao-size-rejections.md  share-removal.md  sqlite-object-storage-blobs.md  streaming-encrypted-updates.md  sync-conflict-resolver.md
issues/chores/: desktop-fuse-build-separation.md  optional-fuse-feature.md  update-workflows.md
issues/features/: bucket-publish-cli.md  cli-overhaul.md  desktop-sidecar-daemon.md  share-removal.md
issues/fuse-integration/: 1-fuse-filesystem.md  index.md  (+3 more)
(+283 files in other folders)
